# vtouch_v2

./: .gitignore  1-1586043-4.lbr  CSLT6B100.l#1  CSLT6B100.l#2  CSLT6B100.l#3  CSLT6B100.lbr  IRLML2502TRPBF.lbr  Solar_diagram.odg  addr_inet  addr_inet.c  goto_logger  l01z.l#1  l01z.l#2  l01z.l#4  l01z.lbr  link.txt  logger  mbmc_connector.sch  mbmc_detail.ods  minicom.ods  minicom.txt  pic_k42.s#1
Varian E220/: E220GEM.doc  Thumbs.db
Varian VIISION/: E1SECSMAN057000_SECS-GEM.doc  SECS-GEM_svid.xlsx  V57000_SECS-GEM.doc  ~$7000_SECS-GEM.doc
board/: pic_k42.b#1  pic_k42.b#2  pic_k42.b#4  pic_k42.b#5  pic_k42.b#6  pic_k42.b#7  pic_k42.b#8  pic_k42.b#9  pic_k42.brd  pic_k42.pro  pic_k42.s#2  pic_k42.s#4  pic_k42.s#5  pic_k42.s#6  pic_k42.s#8  pic_k42.sch
build-qmodbus-Desktop-Debug/: Makefile  moc_BatchProcessor.cpp  moc_ipaddressctrl.cpp  moc_iplineedit.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_qextserialenumerator.cpp  moc_qextserialport.cpp  moc_serialsettingswidget.cpp  moc_tcpipsettingswidget.cpp  qrc_qmodbus.cpp  ui_mainwindow.h  ui_serialsettingswidget.h
display_board/: display_spi.b#1  display_spi.b#2  display_spi.b#5  display_spi.b#7  display_spi.brd  display_spi.pro  display_spi.s#1  display_spi.s#2  display_spi.s#4  display_spi.s#6  display_spi.sch  display_spi7.brd  display_spi7.sch  display_spi_00.job  display_spi_00.pro  display_spi_01.job  display_spi_01.pro  display_spi_02.job  display_spi_02.pro  display_spi_03.job  display_spi_03.pro  display_spi_04.job  display_spi_04.pro  display_spi_05.job  display_spi_05.pro  display_spi_06.job  display_spi_06.pro  display_spi_07.job  display_spi_07.pro  display_spi_08.job  display_spi_08.pro  display_spi_09.job  display_spi_09.pro  display_spi_10.job  display_spi_10.pro  display_spi_11.job  display_spi_11.pro  display_spi_12.job  display_spi_12.pro  display_spi_13.job  (+17 more)
gem/: secstwo-1.0.1.tar
gem/secs/: README
gem/secstwo-1.0.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  binary_msgs.cxx  binary_msgs.h  config.h.in  configure  configure.in  data_test.cxx  doxy.cfg  secstwo_internal.hxx  secstwo_serialize.cxx  secstwo_serialize.h  secstwo_shared_ptr.h  secstwomsg.cxx  secstwomsg.h  serialize_test.cxx  test_defines.h  test_main.cxx
gem/secstwo-1.0.1/xsd/: secstwo.xsd  test.xml
host_board/: MAX5322EAI+.lbr  MAX6818.lbr  design blocks.dbl  hall_sensor100a.b#1  hall_sensor100a.b#2  hall_sensor100a.b#4  hall_sensor100a.b#7  hall_sensor100a.brd  hall_sensor100a.pro  hall_sensor100a.s#1  hall_sensor100a.s#2  hall_sensor100a.s#3  hall_sensor100a.s#6  hall_sensor100a.s#8  hall_sensor100a.sch  mbmc_io.b#1  mbmc_io.b#2  mbmc_io.b#3  mbmc_io.b#4  mbmc_io.b#5  mbmc_io.b#6  mbmc_io.b#7  mbmc_io.b#8  mbmc_io.b#9  mbmc_io.brd  mbmc_io.pro  mbmc_io.s#1  mbmc_io.s#2  mbmc_io.s#3  mbmc_io.s#4  mbmc_io.s#5  mbmc_io.s#6  mbmc_io.s#7  mbmc_io.s#8  mbmc_io.s#9  mbmc_io.sch  mbmc_io_00.job  mbmc_io_00.pro  mbmc_io_01.job  mbmc_io_02.job  (+101 more)
modbus/: SamacSys_Parts.lbr
modbus/re20a/: main.c
n2heater/dsp33_foo.X/: MyConfig.mc3  main.c
n2heater/n2heater.X/: MyConfig.mc3  main.c  n2heater.h  timer.h
n2heater/tel_motor.X/: MyConfig.mc3  main.c  n2heater.h  stepper.h  timer.c  timer.h
q43_board/q43_baseline.X/: MyConfig.mc3  eadog.c  eadog.h  main.c  qconfig.h  ringbufs.c  ringbufs.h  speed.c  speed.h  timers.c  (+3 more)
secs-ii.X/: MyConfig.mc3.bak2  MyConfig.mc3.bak3
secs.X/: MyConfig.mc3  gemsecs.h  msg_text.h  ringbufs.h  vconfig.h
secs_gem.X/: MyConfig.mc3  eadog.c  eadog.h  gemsecs.c  main.c  mconfig.c  memory.hex  msg_text.h  vconfig.h
secs_q84.X/: eadog.c  eadog.h  gemsecs.c  gemsecs.h  main.c  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  mconfig.c  mconfig.h  msg_text.h  mydisplay.h  timers.c  touch_v2.mc3  vconfig.h  vtouch45k80.mc3
touch_board/: d232_board.b#1  d232_board.b#3  d232_board.b#4  d232_board.b#7  d232_board.b#9  d232_board.brd  d232_board.pro  d232_board.s#1  d232_board.s#2  d232_board.s#4  d232_board.s#5  d232_board.s#9  d232_board.sch  d232_board_00.job  d232_board_00.pro  d232_board_01.job  d232_board_01.pro  d232_board_02.job  d232_board_03.job  d232_board_04.job  d232_board_05.job  d232_board_06.job  d232_board_07.job  d232_board_08.job  d232_board_09.job  d232_board_09.pro  d232_board_10.job  d232_board_11.job  d232_board_12.job  d232_board_13.job  d232_board_14.job  d232_board_15.job  d232_board_16.job  d232_board_16.pro  d232_board_17.job  d232_board_18.job  d232_board_19.job  d232_board_20.job  d232_board_21.job  touch_board.b#1  (+44 more)
touch_board_PIC18F47Q/: JS202011SCQN_fixed.lbr  PIC18F47K42-I_PT.lbr  d232_board.b#6  d232_board.b#7  d232_board.s#8  d232_board.s#9  touch_board.b##  touch_board.b#3  touch_board.b#7  touch_board.brd  touch_board.s##  touch_board.s#6  touch_board.s#9
touch_v2.X/: MyConfig.mc3  MyConfig.mc3.bak  MyConfig.mc3.bak0  MyConfig.mc3.bak1  bsoc.c  bsoc.h  daq.c  daq.h  dio.c  dio.h  eadog.c  eadog.h  gemsecs.c  gemsecs.h  hid.c  hid.h  isr_func.c  isr_func.h  main.c  mbmc.c  mbmc.h  mconfig.c  mconfig.h  msg_text.h  mydisplay.h  ringbufs.c  ringbufs.h  tests.h  timers.c  timers.h  vconfig.h
tserv/: tserv.c
(+463 files in other folders)
